 # [#30744] tag mappings are not deleted after a tag is deleted.  Thanks Thomas Hunziker
 # [#30566] Tag Items List Layout Background Alternating Color Bug.  Thanks Seth Warburton
 ^ [#30659] Adds html5 elements to Protostar.  Thanks Seth Warburton
 ^ [#30257] Removed colors from Icomoon named icons.  Thanks Peter van Westen
 ^ [#30816] Documentation error.  Thanks Achal Aggarwal

03-May-2013 Jean-Marie Simonet
 # [#30694] Backend toolbar buttons have forbidden attribute href. Thanks David Hurley
 #$ [#30805] *Isis: sidebar background colour issue
 # [#30103] Cannot delete web site entry for a contact. Thanks Elin Waring
 # [#30748] *Multilanguage issue with contacts. Thanks Benjamin Trenkle
 #$ [#30788] com_newsfeeds title is inconsequent in the backend.
 # [#30784] User profile plugin doesn't save the field inputs after J3.1. Thanks Elin Waring

30-Apr-2013 Jean-Marie Simonet
 # [#30488] Wrong default values for weblink icons in layout. Thanks THomas Hunziker.
 #$ [#30381] Create Folder button label - Media Manager. Thanks Glenn Arkell
 #$ [#30618] *Adding filtering by Unprotected extensions in Extensions Manager=>Manage
 # [#29922] Browser Agent Google Chrome on IOS. Thanks Brian Teeman.
 # [#30622] Queries not using JDatabase. Thanks Georges Wilson
 # [#30774] *SEF plugin issue. Thanks Robert Segura.
 #$ [#30737] Incorrect title of the User Note Categories Manager

29-Apr-2013 Jean-Marie Simonet
 $ Removing deprecated lang strings for the flash Uploader

28-Apr-2013 Jean-Marie Simonet
 $ Adding installation languages : ro-RO and gd-GB

-------------------- 3.1.1 Stable Release [26-Apr-2013] ------------------

26-Apr-2013 Mark Dexter
 # [#30702] Only titles display in featured/blogged views when hide intro text is selected.
 # [#30681] Error in Database tab in Extension Manager.
 # [#30697] Invalid tab end in article edit page. Thanks Dennis Hermatski.
 # [#30725] Exception thrown for empty path. Thanks Elin Waring.